# vela

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/vela_analysis/: Cargo.toml
crates/vela_analysis/src/: completion.rs  diagnostics.rs  expression.rs  fact_scope.rs  facts.rs  hints.rs  hover.rs  lib.rs  registry.rs  stdlib.rs  type_fact.rs
crates/vela_analysis/src/completion/: tests.rs
crates/vela_analysis/src/diagnostics/: candidates.rs  effects.rs  match_exhaustiveness.rs  match_patterns.rs  member.rs  record_constructors.rs
crates/vela_analysis/src/expression/: condition_narrowing.rs  match_narrowing.rs  tests.rs  try_propagation.rs
crates/vela_analysis/src/hover/: detail.rs  tests.rs
crates/vela_analysis/src/stdlib/: function_tests.rs  functions.rs  methods.rs  reflect.rs  tests.rs
crates/vela_analysis/tests/: completion_fixtures.rs  conformance.rs  diagnostic_fixtures.rs
crates/vela_bytecode/: Cargo.toml
crates/vela_bytecode/src/: cache_site.rs  compiler.rs  lib.rs  linked.rs  linker.rs  program_image.rs  script_methods.rs  verification.rs
crates/vela_bytecode/src/compiler/: assignment_payloads.rs  assignments.rs  body_payloads.rs  cache_sites.rs  call_args.rs  calls.rs  const_eval.rs  constructors.rs  control_flow.rs  (+28 more)
crates/vela_c_api/: Cargo.toml
crates/vela_c_api/src/: lib.rs
crates/vela_cli/: Cargo.toml
crates/vela_cli/src/: demo.rs  diagnostics.rs  hot_reload_demo.rs  main.rs
crates/vela_cli/tests/: demo_scripts.rs  run_scripts.rs
crates/vela_engine/: Cargo.toml
crates/vela_engine/benches/: hot_reload.rs
crates/vela_engine/examples/: host_type_methods.rs
crates/vela_engine/src/: args.rs  builder.rs  clock.rs  compiler_options.rs  compiler_registry.rs  context.rs  context_schema.rs  engine.rs  error.rs  host_type.rs  io.rs  lib.rs  metadata.rs  method.rs  native.rs  permission.rs  prelude.rs  random.rs  reload.rs  runtime.rs  schema.rs  source.rs  standard.rs  tests.rs  typed.rs  validation.rs
crates/vela_engine/tests/: args.rs  host_type_methods_example.rs  hot_reload.rs  prelude.rs  script_reflection.rs
crates/vela_hot_reload/: Cargo.toml
crates/vela_hot_reload/src/: abi.rs  compile.rs  error.rs  function_signature.rs  lib.rs  module_abi.rs  policy.rs  profile.rs  report.rs  report_detail.rs  report_render.rs  runtime.rs  schema_abi.rs  symbol.rs  tests.rs  version.rs
crates/vela_language_service/: Cargo.toml
crates/vela_language_service/src/: call_hierarchy.rs  callable_context.rs  code_action.rs  completion.rs  cursor_context.rs  definition.rs  diagnostics.rs  display.rs  expression_facts.rs  folding.rs  formatting.rs  hover.rs  incremental.rs  inlay.rs  lib.rs  member_access.rs  path_calls.rs  project.rs  query_context.rs  references.rs  rename.rs  schema.rs  selection.rs  semantic_tokens.rs  signature.rs  symbol_ref.rs  symbol_target.rs  symbols.rs  text.rs  workspace.rs
crates/vela_lsp_server/: Cargo.toml
crates/vela_lsp_server/src/: architecture_tests.rs  call_hierarchy.rs  capabilities.rs  client.rs  code_action.rs  completion.rs  config.rs  config_change.rs  definition.rs  folding.rs  formatting.rs  global_state.rs  hover.rs  inlay.rs  legacy_rpc.rs  lib.rs  lifecycle.rs  line_index.rs  main.rs  main_loop.rs  profile.rs  protocol.rs  queries.rs  references.rs  reload.rs  rename.rs  rpc.rs  selection.rs  semantic_tokens.rs  signature.rs  stdio.rs  symbols.rs  task.rs  tests.rs  tracing.rs  transport.rs  watching.rs
crates/vela_lsp_server/tests/: stdio_transport.rs
crates/vela_macros/: Cargo.toml
crates/vela_macros/src/: attrs.rs  hash.rs  lib.rs  script_function.rs  script_host.rs  script_methods.rs  signature.rs
crates/vela_macros/tests/: script_function.rs  script_host.rs  script_methods.rs
crates/vela_playground_wasm/: Cargo.toml
crates/vela_playground_wasm/src/: lib.rs
crates/vela_reflect/: Cargo.toml
crates/vela_reflect/src/: access.rs  candidates.rs  descriptor_targets.rs  error.rs  error_diagnostics.rs  lib.rs  member_records.rs  members.rs  metadata.rs  metadata_records.rs  modules.rs  permissions.rs  registry.rs  script_attrs.rs  script_types.rs  tests.rs  types.rs  value.rs  value_access.rs
crates/vela_reflect/tests/: value_access.rs
crates/vela_vm/: Cargo.toml
crates/vela_vm/benches/: baseline.rs  external_compare.rs
crates/vela_vm/src/: array_methods.rs  budget.rs  bytes_methods.rs  callback_method_dispatch.rs  char_methods.rs  closure_calls.rs  collection_mutation.rs  constant_loads.rs  container_contracts.rs  dynamic_method_resolution.rs  equality.rs  error.rs  execution.rs  field_access.rs  format_strings.rs  frame.rs  heap.rs  heap_execution.rs  heap_values.rs  host_access.rs  host_mutations.rs  host_patches.rs  host_paths.rs  host_values.rs  i64_ops.rs  indexing.rs  iteration.rs  lib.rs  linked_execution.rs  linked_iteration.rs  map_methods.rs  math_stdlib.rs  method_runtime.rs  native_function_calls.rs  numeric_conversions.rs  numeric_ops.rs  option_result.rs  option_result_methods.rs  owned_value.rs  ranges.rs  (+28 more)
crates/vela_vm/tests/: baseline_cache_delta.rs  baseline_workload_contract.rs  conformance.rs  diagnostic_fixtures.rs  external_compare_contract.rs
examples/: Cargo.toml  README.md
examples/game_server_demo/scripts/: bad_schema_duplicate_field.vela  context_clock.lang  context_clock.vela  context_event.lang  gameplay_helpers.lang  generic_type_hint_denied.vela  host_patch_conflict.vela  hot_reload_function_swap_invalid.lang  hot_reload_function_swap_v1.lang  monster_kill_reward.lang  monster_kill_reward.vela  quest_progress.lang  random_allowed.vela  random_permission_denied.lang  random_permission_denied.vela  random_reflect_allowed.vela  reflect_debug.lang  reflect_debug.vela  reward_preview.vela
examples/host_type_methods/: README.md  handle.vela
examples/src/: diagnostics.rs  game_server.rs  gameplay.rs  hot_reload_demo.rs  lib.rs
examples/src/game_server/: ids.rs  registry.rs  state.rs
examples/src/gameplay/: fixture.rs  ids.rs  schema.rs
examples/tests/: runnable_examples.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs
(+913 files in other folders)
