[workspace]
members = [
    "crates/vela_analysis",
    "crates/vela_bytecode",
    "crates/vela_cli",
    "crates/vela_common",
    "crates/vela_engine",
    "crates/vela_hir",
    "crates/vela_hot_reload",
    "crates/vela_host",
    "crates/vela_macros",
    "crates/vela_reflect",
    "crates/vela_syntax",
    "crates/vela_vm",
    "examples",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
