[workspace]
members = [
    "crates/vela_analysis",
    "crates/vela_bytecode",
    "crates/vela_c_api",
    "crates/vela_cli",
    "crates/vela_common",
    "crates/vela_def",
    "crates/vela_engine",
    "crates/vela_hir",
    "crates/vela_hot_reload",
    "crates/vela_host",
    "crates/vela_macros",
    "crates/vela_playground_wasm",
    "crates/vela_registry",
    "crates/vela_reflect",
    "crates/vela_syntax",
    "crates/vela_vm",
    "examples",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
blake3 = "1"
vela_analysis = { path = "crates/vela_analysis" }
vela_bytecode = { path = "crates/vela_bytecode" }
vela_c_api = { path = "crates/vela_c_api" }
vela_cli = { path = "crates/vela_cli" }
vela_common = { path = "crates/vela_common" }
vela_def = { path = "crates/vela_def" }
vela_engine = { path = "crates/vela_engine" }
vela_hir = { path = "crates/vela_hir" }
vela_hot_reload = { path = "crates/vela_hot_reload" }
vela_host = { path = "crates/vela_host" }
vela_macros = { path = "crates/vela_macros" }
vela_playground_wasm = { path = "crates/vela_playground_wasm" }
vela_registry = { path = "crates/vela_registry" }
vela_reflect = { path = "crates/vela_reflect" }
vela_syntax = { path = "crates/vela_syntax" }
vela_vm = { path = "crates/vela_vm" }
wasm-bindgen = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
