[workspace]
members = [
    "crates/vela_analysis",
    "crates/vela_bytecode",
    "crates/vela_c_api",
    "crates/vela_cli",
    "crates/vela_common",
    "crates/vela_def",
    "crates/vela_engine",
    "crates/vela_hir",
    "crates/vela_hot_reload",
    "crates/vela_host",
    "crates/vela_language_service",
    "crates/vela_lsp_server",
    "crates/vela_macros",
    "crates/vela_playground_wasm",
    "crates/vela_registry",
    "crates/vela_reflect",
    "crates/vela_stdlib",
    "crates/vela_stdlib_runtime",
    "crates/vela_syntax",
    "crates/vela_vm",
    "examples",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
lsp-server = "0.7.9"
lsp-types = "0.95.0"
proc-macro2 = "1"
quote = "1"
rowan = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
blake3 = "1"
vela_analysis = { path = "crates/vela_analysis" }
vela_bytecode = { path = "crates/vela_bytecode" }
vela_c_api = { path = "crates/vela_c_api" }
vela_cli = { path = "crates/vela_cli" }
vela_common = { path = "crates/vela_common" }
vela_def = { path = "crates/vela_def" }
vela_engine = { path = "crates/vela_engine" }
vela_hir = { path = "crates/vela_hir" }
vela_hot_reload = { path = "crates/vela_hot_reload" }
vela_host = { path = "crates/vela_host" }
vela_language_service = { path = "crates/vela_language_service" }
vela_macros = { path = "crates/vela_macros" }
vela_playground_wasm = { path = "crates/vela_playground_wasm" }
vela_registry = { path = "crates/vela_registry" }
vela_reflect = { path = "crates/vela_reflect" }
vela_stdlib = { path = "crates/vela_stdlib" }
vela_stdlib_runtime = { path = "crates/vela_stdlib_runtime" }
vela_syntax = { path = "crates/vela_syntax" }
vela_vm = { path = "crates/vela_vm" }
wasm-bindgen = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
