[package]
name = "vela_examples"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
vela_bytecode = { workspace = true }
vela_common = { workspace = true }

vela_def = { workspace = true }
vela_engine = { workspace = true, features = ["serde"] }
vela_hot_reload = { workspace = true }
vela_host = { workspace = true }
vela_macros = { workspace = true }
vela_reflect = { workspace = true }
vela_vm = { workspace = true }

[lints]
workspace = true
