[package]
name = "vela_examples"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
vela_bytecode = { path = "../crates/vela_bytecode" }
vela_common = { path = "../crates/vela_common" }

vela_def = { path = "../crates/vela_def" }
vela_engine = { path = "../crates/vela_engine", features = ["serde"] }
vela_hot_reload = { path = "../crates/vela_hot_reload" }
vela_host = { path = "../crates/vela_host" }
vela_macros = { path = "../crates/vela_macros" }
vela_reflect = { path = "../crates/vela_reflect" }
vela_vm = { path = "../crates/vela_vm" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
