[package]
name = "vela-fuzz"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true }
vela_common = { workspace = true }
vela_syntax = { workspace = true }

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false
