[package]
name = "vela-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
vela_common = { path = "../crates/vela_common" }
vela_syntax = { path = "../crates/vela_syntax" }

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
