[package]
name = "vela_analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vela_common = { path = "../vela_common" }
vela_hir = { path = "../vela_hir" }
vela_reflect = { path = "../vela_reflect" }
vela_syntax = { path = "../vela_syntax" }

[dev-dependencies]

[lints]
workspace = true
