[package]
name = "vela_analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vela_common = { workspace = true }
vela_hir = { workspace = true }
vela_reflect = { workspace = true }
vela_syntax = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
