[package]
name = "vela_bytecode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vela_common = { workspace = true }
vela_def = { workspace = true }
vela_host = { workspace = true }
vela_hir = { workspace = true }
vela_syntax = { workspace = true }

[lints]
workspace = true
