[package]
name = "vela_c_api"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
vela_common = { workspace = true }
vela_engine = { workspace = true }
vela_vm = { workspace = true }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "deny"
