[package]
name = "vela_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vela_bytecode = { path = "../vela_bytecode" }
vela_common = { path = "../vela_common" }
vela_hot_reload = { path = "../vela_hot_reload" }
vela_host = { path = "../vela_host" }
vela_reflect = { path = "../vela_reflect" }
vela_vm = { path = "../vela_vm" }

[lints]
workspace = true
