[package]
name = "vela_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vela_bytecode = { path = "../vela_bytecode" }
vela_common = { path = "../vela_common" }
vela_engine = { path = "../vela_engine" }
vela_vm = { path = "../vela_vm" }

[lints]
workspace = true
