[package]
name = "vela_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
vela_bytecode = { workspace = true }
vela_common = { workspace = true }
vela_engine = { workspace = true }
vela_vm = { workspace = true }

[lints]
workspace = true
