[package]
name = "vela_engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
vela_bytecode = { path = "../vela_bytecode" }
vela_common = { path = "../vela_common" }
vela_hir = { path = "../vela_hir" }
vela_hot_reload = { path = "../vela_hot_reload" }
vela_host = { path = "../vela_host" }
vela_reflect = { path = "../vela_reflect" }
vela_vm = { path = "../vela_vm" }

[[bench]]
name = "hot_reload"
harness = false

[lints]
workspace = true
