[package]
name = "vela_engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
vela_bytecode = { workspace = true }
vela_common = { workspace = true }

vela_def = { workspace = true }
vela_hir = { workspace = true }
vela_hot_reload = { workspace = true }
vela_host = { workspace = true }
vela_reflect = { workspace = true }
vela_stdlib = { workspace = true }
vela_vm = { workspace = true }

[features]
serde = ["dep:serde", "vela_vm/serde"]

[dev-dependencies]
vela_macros = { workspace = true }

[[bench]]
name = "hot_reload"
harness = false

[lints]
workspace = true
