[package]
name = "vela_hot_reload"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vela_bytecode = { path = "../vela_bytecode" }
vela_common = { path = "../vela_common" }
vela_reflect = { path = "../vela_reflect" }

[dev-dependencies]
vela_vm = { path = "../vela_vm" }

[lints]
workspace = true
