[package]
name = "vela_hot_reload"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vela_bytecode = { workspace = true }
vela_common = { workspace = true }
vela_hir = { workspace = true }
vela_reflect = { workspace = true }

[dev-dependencies]
vela_vm = { workspace = true }

[lints]
workspace = true
