[package]
name = "vela_language_service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
vela_analysis.workspace = true
vela_common.workspace = true
vela_hir.workspace = true
vela_syntax.workspace = true

[lints]
workspace = true
