[package]
name = "vela_lsp_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vela_language_service = { workspace = true }

[lints]
workspace = true
