[package]
name = "vela_macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
vela_common = { workspace = true }

vela_def = { workspace = true }

[dev-dependencies]
vela_bytecode = { workspace = true }
vela_engine = { workspace = true }
vela_host = { workspace = true }
vela_vm = { workspace = true }
vela_common = { workspace = true }

vela_def = { workspace = true }
vela_reflect = { workspace = true }

[lints]
workspace = true
