[package]
name = "vela_playground_wasm"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
vela_bytecode = { workspace = true }
vela_common = { workspace = true }
vela_engine = { workspace = true }
vela_vm = { workspace = true }
wasm-bindgen = { workspace = true }

[lints]
workspace = true
