[package]
name = "vela_reflect"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vela_common = { path = "../vela_common" }
vela_hir = { path = "../vela_hir" }
vela_host = { path = "../vela_host" }
vela_syntax = { path = "../vela_syntax" }

[lints]
workspace = true
