[package]
name = "vela_vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
vela_bytecode = { path = "../vela_bytecode" }
vela_common = { path = "../vela_common" }
vela_host = { path = "../vela_host" }
vela_reflect = { path = "../vela_reflect" }

[features]
serde = ["dep:serde"]

[dev-dependencies]
vela_hir = { path = "../vela_hir" }

[[bench]]
name = "baseline"
harness = false

[[bench]]
name = "external_compare"
harness = false

[lints]
workspace = true
