[package]
name = "vela_vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
vela_bytecode = { workspace = true }
vela_common = { workspace = true }

vela_def = { workspace = true }
vela_host = { workspace = true }
vela_reflect = { workspace = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
vela_hir = { workspace = true }

[[bench]]
name = "baseline"
harness = false

[[bench]]
name = "external_compare"
harness = false

[lints]
workspace = true
